File Structure Optimisied

--- a/assets/html/100daysofcode.html
+++ b/assets/html/100daysofcode.html
@@ -11,33 +11,33 @@
 
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
   <!-- Icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="assets/fonts/line-icons.css">
+  <link rel="stylesheet" href="../fonts/line-icons.css">
   <!-- Owl carousel -->
-  <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-  <link rel="stylesheet" href="assets/css/owl.theme.css">
+  <link rel="stylesheet" href="../css/owl.carousel.min.css">
+  <link rel="stylesheet" href="../css/owl.theme.css">
 
   <!--Swiper JS-->
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/swipper.css">
+  <link rel="stylesheet" href="../css/swipper.css">
   <!-- Animate -->
-  <link rel="stylesheet" href="assets/css/animate.css">
+  <link rel="stylesheet" href="../css/animate.css">
   <!-- animate-on-scroll -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!-- Main Style -->
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
   <!--100 days of code css  -->
-  <link rel="stylesheet" href="assets/css/100daysofcode.css">
+  <link rel="stylesheet" href="../css/100daysofcode.css">
   <!-- Responsive Style -->
-  <link rel="stylesheet" href="assets/css/responsive.css">
-  <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-png">
+  <link rel="stylesheet" href="../css/responsive.css">
+  <link rel="shortcut icon" href="../img/logo.png" type="image/x-png">
 
   <!-- counter imports -->
-  <script src="assets/js/jquery-min.js"></script>
+  <script src="../js/jquery-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
   <!-- counter imports end-->
@@ -64,7 +64,7 @@
     <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <a href="index.html" class="navbar-brand"> <img src="./assets/img/logo.png" class="logo img-fluid " alt=""></a>
+        <a href="../../index.html" class="navbar-brand"> <img src="../img/logo.png" class="logo img-fluid " alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <i class="lni-menu"></i>
@@ -147,7 +147,7 @@
   <br>
 
   <div class="center">
-    <img src="./assets/img/100daysofcode.png" class="centered_img">
+    <img src="../img/100daysofcode.png" class="centered_img">
 
   </div>
 
@@ -499,14 +499,14 @@
       
       </div>
         <div class="col-md-6">
-          <img class="rules-img" src="./assets/img/goodies (1).png">
+          <img class="rules-img" src="../img/goodies (1).png">
         </div>
     </div>
       <br><br><hr><br><br>
 
       <div class="row">
         <div class="col-md-6">
-          <img class="rules-img" src="assets/img/Recruitment-Journey.png">
+          <img class="rules-img" src="../img/Recruitment-Journey.png">
         </div>
 
         <div class="point point-2 col-md-6">
@@ -522,7 +522,7 @@
         <h4>Participants  completed the program will receive 100 days of code Completion Certificate and Course Voucher worth Rs.4000😍</h4>
       </div>
       <div class="col-md-6">
-        <img class="rules-img" src="assets/img/certificate.png">
+        <img class="rules-img" src="../img/certificate.png">
       </div>
      </div>
 
@@ -557,14 +557,14 @@
             <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
             <div class="community_box box4" data-tilt data-tilt-scale="1.1">
               <a href="https://www.newtonschool.co/" style="text-decoration: none;" target="_blank">
-                <img src="./assets/img/Partners/Newton School.png" class="communityPartner__image"
+                <img src="../img/Partners/Newton School.png" class="communityPartner__image"
                   alt="Azdev community image">
               </a>
             </div>
 
             <div class="community_box box5" data-tilt data-tilt-scale="1.1">
               <a href="https://www.codingminutes.com/" style="text-decoration: none;" target="_blank">
-                <img src="./assets/img/Partners/CodingMinutes Logo.png" class="communityPartner__image"
+                <img src="../img/Partners/CodingMinutes Logo.png" class="communityPartner__image"
                   alt="Azdev community image">
               </a>
             </div>
@@ -633,7 +633,7 @@
           </div>
         </div>
         <div class="col-lg-5 col-md-12 col-xs-12">
-          <img class="contact-img" src="./assets/img/contact.png" alt="">
+          <img class="contact-img" src="../img/contact.png" alt="">
         </div>
       </div>
     </div>
@@ -673,7 +673,7 @@
           <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
             <h3 class="footer-titel">Quick Links</h3>
             <ul class="footer-link">
-              <li><a href="#hero-area">Home</a></li>
+              <li><a href="/#hero-area">Home</a></li>
               <li><a href="/#about">About</a></li>
               <li><a href="/#testimonials">Team</a></li>
               <li><a href="/#events">Events</a></li>
@@ -783,25 +783,25 @@
   <!-- counter scripts end -->
 
   <!-- emailjs cdn -->
-  <script src="./assets/js/blog.js"></script>
+  <script src="../js/blog.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <!-- emailjs cdn -->
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="assets/js/popper.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/owl.carousel.min.js"></script>
-  <script src="assets/js/wow.js"></script>
-  <script src="assets/js/jquery.nav.js"></script>
-  <script src="assets/js/scrolling-nav.js"></script>
-  <script src="assets/js/jquery.easing.min.js"></script>
-  <script src="assets/js/main.js"></script>
-  <script src="assets/js/form-validator.min.js"></script>
-  <script src="assets/js/contact-form-script.min.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/owl.carousel.min.js"></script>
+  <script src="../js/wow.js"></script>
+  <script src="../js/jquery.nav.js"></script>
+  <script src="../js/scrolling-nav.js"></script>
+  <script src="../js/jquery.easing.min.js"></script>
+  <script src="../js/main.js"></script>
+  <script src="../js/form-validator.min.js"></script>
+  <script src="../js/contact-form-script.min.js"></script>
 
   <!--Swiper JS-->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-  <script src="assets/js/swipper.js"></script>
+  <script src="../js/swipper.js"></script>
 
 
   <!-- counter scripts -->
@@ -822,22 +822,22 @@
   <!-- emailjs cdn -->
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="assets/js/popper.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/owl.carousel.min.js"></script>
-  <script src="assets/js/wow.js"></script>
-  <script src="assets/js/jquery.nav.js"></script>
-  <script src="assets/js/scrolling-nav.js"></script>
-  <script src="assets/js/jquery.easing.min.js"></script>
-  <script src="assets/js/main.js"></script>
-  <script src="assets/js/form-validator.min.js"></script>
-  <script src="assets/js/contact-form-script.min.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/owl.carousel.min.js"></script>
+  <script src="../js/wow.js"></script>
+  <script src="../js/jquery.nav.js"></script>
+  <script src="../js/scrolling-nav.js"></script>
+  <script src="../js/jquery.easing.min.js"></script>
+  <script src="../js/main.js"></script>
+  <script src="../js/form-validator.min.js"></script>
+  <script src="../js/contact-form-script.min.js"></script>
 
   <!--Swiper JS-->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-  <script src="assets/js/swipper.js"></script>
+  <script src="../js/swipper.js"></script>
 
-  <script src="assets/js/blog.js"></script>
+  <script src="../js/blog.js"></script>
 
 
 </body>
