--- a/assets/html/blog.html
+++ b/assets/html/blog.html
@@ -11,33 +11,33 @@
 
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
   <!-- Icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="assets/fonts/line-icons.css">
+  <link rel="stylesheet" href="../fonts/line-icons.css">
   <!-- Owl carousel -->
-  <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-  <link rel="stylesheet" href="assets/css/owl.theme.css">
+  <link rel="stylesheet" href="../css/owl.carousel.min.css">
+  <link rel="stylesheet" href="../css/owl.theme.css">
 
   <!--Swiper JS-->
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/swipper.css">
+  <link rel="stylesheet" href="../css/swipper.css">
   <!-- Animate -->
-  <link rel="stylesheet" href="assets/css/animate.css">
+  <link rel="stylesheet" href="../css/animate.css">
   <!-- animate-on-scroll -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!-- Main Style -->
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
   <!--blog css  -->
-  <link rel="stylesheet" href="assets/css/blog.css">
+  <link rel="stylesheet" href="../css/blog.css">
   <!-- Responsive Style -->
-  <link rel="stylesheet" href="assets/css/responsive.css">
-  <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-png">
+  <link rel="stylesheet" href="../css/responsive.css">
+  <link rel="shortcut icon" href="../img/logo.png" type="image/x-png">
 
   <!-- counter imports -->
-  <script src="assets/js/jquery-min.js"></script>
+  <script src="../js/jquery-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
   <!-- counter imports end-->
@@ -54,7 +54,7 @@
     <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <a href="index.html" class="navbar-brand"> <img src="./assets/img/logo.png" class="logo img-fluid " alt=""></a>
+        <a href="../../index.html" class="navbar-brand"> <img src="../img/logo.png" class="logo img-fluid " alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <i class="lni-menu"></i>
@@ -87,7 +87,7 @@
               </a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="./blog.html">
+              <a class="nav-link" href="blog.html">
                 Blogs
               </a>
             </li>
@@ -333,7 +333,7 @@
     <div class="blog" data-aos="fade-up" data-aos-duration="1500">
 
       <div class="image" style="max-width: 50rem;">
-        <img src="./assets/img/blog/austrology.jpg" alt="AI and ML blog image">
+        <img src="../img/blog/austrology.jpg" alt="AI and ML blog image">
 
       </div>
       <div class="blog_content" id="content">
@@ -361,7 +361,7 @@
     <div class="blog" data-aos="fade-up" data-aos-duration="1500">
 
       <div class="image" style="max-width: 50rem;">
-        <img src="./assets/img/blog/being-by-doing.jpg" alt="AI and ML blog image">
+        <img src="../img/blog/being-by-doing.jpg" alt="AI and ML blog image">
 
       </div>
       <div class="blog_content" id="content">
@@ -392,7 +392,7 @@
     <div class="blog" data-aos="fade-up" data-aos-duration="1500">
 
       <div class="image" style="max-width: 50rem;">
-        <img src="./assets/img/blog/google-open-sourse.png" alt="OpenSource blog image">
+        <img src="../img/blog/google-open-sourse.png" alt="OpenSource blog image">
 
       </div>
       <div class="blog_content" id="content">
@@ -449,7 +449,7 @@
     <div class="blog" data-aos="fade-up" data-aos-duration="1500">
 
       <div class="image" style="max-width: 50rem;">
-        <img src="assets/img/blog/web dev.png" alt="Programming Sites">
+        <img src="../img/blog/web dev.png" alt="Programming Sites">
 
       </div>
       <div class="blog_content" id="content">
@@ -549,7 +549,7 @@
         <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
           <div class="community_box box1">
             <a href="https://www.geeksforgeeks.org/" style="text-decoration: none;" target="_blank">
-              <img src="./assets/img/Partners/Geeks.jpg" class="communityPartner__image" alt="" style="margin-bottom:2rem ;">
+              <img src="../img/Partners/Geeks.jpg" class="communityPartner__image" alt="" style="margin-bottom:2rem ;">
             </a>
           </div>
 
@@ -557,7 +557,7 @@
 
           <div class="community_box box2"style="margin-bottom:2rem ;">
             <a href="https://www.azdev.community/index.html#communities" style="text-decoration: none;" target="_blank">
-              <img src="./assets/img/Partners/Az.png" class="communityPartner__image" alt="">
+              <img src="../img/Partners/Az.png" class="communityPartner__image" alt="">
             </a>
           </div>
         </div>
@@ -565,20 +565,20 @@
 
             <div class="community_box box1" style="margin-bottom:2rem ;">
               <a href="https://givemycertificate.com/" style="text-decoration: none;" target="_blank">
-                <img src="./assets/img/Partners/GMC LogoS.png" class="communityPartner__image" alt="">
+                <img src="../img/Partners/GMC LogoS.png" class="communityPartner__image" alt="">
               </a>
             </div>
 
             <div class="community_box box2" data-tilt data-tilt-scale="1.1" style="margin-bottom:2rem ;">
               <a href="https://www.newtonschool.co/" style="text-decoration: none;" target="_blank">
-                <img src="./assets/img/Partners/Newton School.png" class="communityPartner__image"
+                <img src="../img/Partners/Newton School.png" class="communityPartner__image"
                   alt="Azdev community image">
               </a>
             </div>
 
             <div class="community_box box2" data-tilt data-tilt-scale="1.1" style="margin-bottom:2rem ;">
               <a href="https://www.codingminutes.com/" style="text-decoration: none;" target="_blank">
-                <img src="./assets/img/Partners/CodingMinutes Logo.png" class="communityPartner__image"
+                <img src="../img/Partners/CodingMinutes Logo.png" class="communityPartner__image"
                   alt="Azdev community image">
               </a>
             </div>
@@ -607,12 +607,12 @@
         <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
           <div class="community_box box1">
             <a href="https://learnwith.community/" style="text-decoration: none;" target="_blank">
-              <img src="./assets/img/Partners/LWC.png" class="communityPartner__image" alt="">
+              <img src="../img/Partners/LWC.png" class="communityPartner__image" alt="">
             </a>
           </div>
           <div class="community_box box2">
             <a href="https://gdsc.community.dev/kalindi-college-delhi/" style="text-decoration: none;" target="_blank">
-              <img src="./assets/img/Partners/GDSC_kalindi.jpg" class="communityPartner__image" alt="">
+              <img src="../img/Partners/GDSC_kalindi.jpg" class="communityPartner__image" alt="">
             </a>
           </div>
         </div>
@@ -620,13 +620,13 @@
         <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
           <div class="community_box box3">
             <a href="https://linktr.ee/cs_sattva" style="text-decoration: none;" target="_blank">
-              <img src="./assets/img/Partners/Sattva.jpg" class="communityPartner__image" alt="">
+              <img src="../img/Partners/Sattva.jpg" class="communityPartner__image" alt="">
             </a>
           </div>
           <div class="community_box box4">
             <a href="https://www.linkedin.com/company/algoderscommunity/" style="text-decoration: none;"
               target="_blank">
-              <img src="./assets/img/Partners/Algo.jpeg" class="communityPartner__image" alt="">
+              <img src="../img/Partners/Algo.jpeg" class="communityPartner__image" alt="">
             </a>
           </div>
         </div>
@@ -634,12 +634,12 @@
         <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
           <div class="community_box box5">
             <a href="https://www.linkedin.com/company/sudan-s-tech/" style="text-decoration: none;" target="_blank">
-              <img src="./assets/img/Partners/Sudands.jpg" class="communityPartner__image" alt="">
+              <img src="../img/Partners/Sudands.jpg" class="communityPartner__image" alt="">
             </a>
           </div>
           <div class="community_box box5">
             <a href="https://linktr.ee/lwmcommunity" style="text-decoration: none;" target="_blank">
-              <img src="./assets/img/Partners/LWM.png" class="communityPartner__image" alt="">
+              <img src="../img/Partners/LWM.png" class="communityPartner__image" alt="">
             </a>
           </div>
 
@@ -703,7 +703,7 @@
           </div>
         </div>
         <div class="col-lg-5 col-md-12 col-xs-12">
-          <img class="contact-img" src="./assets/img/contact.png" alt="">
+          <img class="contact-img" src="../img/contact.png" alt="">
         </div>
       </div>
     </div>
@@ -861,25 +861,25 @@
   <!-- counter scripts end -->
 
   <!-- emailjs cdn -->
-  <script src="./assets/js/blog.js"></script>
+  <script src="../js/blog.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <!-- emailjs cdn -->
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="assets/js/popper.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/owl.carousel.min.js"></script>
-  <script src="assets/js/wow.js"></script>
-  <script src="assets/js/jquery.nav.js"></script>
-  <script src="assets/js/scrolling-nav.js"></script>
-  <script src="assets/js/jquery.easing.min.js"></script>
-  <script src="assets/js/main.js"></script>
-  <script src="assets/js/form-validator.min.js"></script>
-  <script src="assets/js/contact-form-script.min.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/owl.carousel.min.js"></script>
+  <script src="../js/wow.js"></script>
+  <script src="../js/jquery.nav.js"></script>
+  <script src="../js/scrolling-nav.js"></script>
+  <script src="../js/jquery.easing.min.js"></script>
+  <script src="../js/main.js"></script>
+  <script src="../js/form-validator.min.js"></script>
+  <script src="../js/contact-form-script.min.js"></script>
 
   <!--Swiper JS-->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-  <script src="assets/js/swipper.js"></script>
+  <script src="../js/swipper.js"></script>
 
 
   <!-- counter scripts -->
@@ -900,22 +900,22 @@
   <!-- emailjs cdn -->
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="assets/js/popper.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/owl.carousel.min.js"></script>
-  <script src="assets/js/wow.js"></script>
-  <script src="assets/js/jquery.nav.js"></script>
-  <script src="assets/js/scrolling-nav.js"></script>
-  <script src="assets/js/jquery.easing.min.js"></script>
-  <script src="assets/js/main.js"></script>
-  <script src="assets/js/form-validator.min.js"></script>
-  <script src="assets/js/contact-form-script.min.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/owl.carousel.min.js"></script>
+  <script src="../js/wow.js"></script>
+  <script src="../js/jquery.nav.js"></script>
+  <script src="../js/scrolling-nav.js"></script>
+  <script src="../js/jquery.easing.min.js"></script>
+  <script src="../js/main.js"></script>
+  <script src="../js/form-validator.min.js"></script>
+  <script src="../js/contact-form-script.min.js"></script>
 
   <!--Swiper JS-->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-  <script src="assets/js/swipper.js"></script>
+  <script src="../js/swipper.js"></script>
 
-  <script src="assets/js/blog.js"></script>
+  <script src="../js/blog.js"></script>
 
 
 </body>
