--- a/assets/html/opportunity.html
+++ b/assets/html/opportunity.html
@@ -10,27 +10,27 @@
     <title>CodeIN Community </title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!-- Icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="assets/fonts/line-icons.css">
+    <link rel="stylesheet" href="../fonts/line-icons.css">
     <!-- Owl carousel -->
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/owl.theme.css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../css/owl.theme.css">
 
     <!-- Animate -->
-    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="../css/animate.css">
 
 
-    <link rel="stylesheet" href="assets/css/blog.css">
-    <link rel="stylesheet" href="assets/css/oppurtunity.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="../css/blog.css">
+    <link rel="stylesheet" href="../css/oppurtunity.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <!-- Responsive Style -->
-    <link rel="stylesheet" href="assets/css/responsive.css">
-    <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-png">
+    <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="shortcut icon" href="../img/logo.png" type="image/x-png">
 
 </head>
 
@@ -41,7 +41,7 @@
         <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
-                <a href="index.html" class="navbar-brand"> <img src="./assets/img/logo.png" class="logo img-fluid "
+                <a href="../../index.html" class="navbar-brand"> <img src="../img/logo.png" class="logo img-fluid "
                         alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +70,7 @@
                             </a>
                         </li>
                         <li class="nav-item active opportunity">
-                            <a class="nav-link" href="./opportunity.html">
+                            <a class="nav-link" href="opportunity.html">
                                 Opportunity
                             </a>
                         </li>
@@ -110,7 +110,7 @@
         <div class="oppurtunity_section">
 
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/100 Days of Code.png" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/100 Days of Code.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">CodeIN Community is come up with 100 Days of Code Program</h5>
                     <br> <br>
@@ -147,7 +147,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/opp-2.png" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/opp-2.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Spark-a-thon a hackathon- By CodeIN Community</h5>
                     <br> <br>
@@ -189,7 +189,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/codein.png" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/codein.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Winter Fest 2022 🧑‍💻</h5>
                     <br>
@@ -238,7 +238,7 @@
         <div class="oppurtunity_section">
 
             <div class="card">
-                <img class="card-img-top" height="100%" src="./assets/img/opportunity/oppor4.png" alt="Card image cap">
+                <img class="card-img-top" height="100%" src="../img/opportunity/oppor4.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Embark on a week of creation and exploration at LHD</h5>
                     <br> <br>
@@ -277,7 +277,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" height="23%" src="./assets/img/opportunity/oppo5.png" alt="Card image cap">
+                <img class="card-img-top" height="23%" src="../img/opportunity/oppo5.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Get rewarded for gaining tech skills and free certifications at the Microsoft
                         Spring Skills Challenge🥳</h5>
@@ -303,7 +303,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" height="50%" src="./assets/img/opportunity/opp__6.png" alt="Card image cap">
+                <img class="card-img-top" height="50%" src="../img/opportunity/opp__6.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Internship Opportunity at Sharechat ✨.</h5>
 
@@ -345,7 +345,7 @@
         <div class="oppurtunity_section">
 
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/opp7.png" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/opp7.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">DELL DIGITAL ART COMPETITION</h5>
                     <br> <br>
@@ -390,7 +390,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/oppo8.png" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/oppo8.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Amazon | Hiring Software Development Intern 🥳🥳</h5>
                     <br> <br>
@@ -429,7 +429,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/opp9.jpg" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/opp9.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Internship Challenge by Ronin Labs is brought to you by Reskilll🤩 X Spark
                         AR✨.</h5>
@@ -452,7 +452,7 @@
 
         <div class="oppurtunity_section">
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/opp10.png" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/opp10.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">📌Winter Interview Preparation course from Geeks for Geeks(100% off)
                         Invitation only.</h5>
@@ -487,7 +487,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/oppor11.png" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/oppor11.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Dream it. Build it. Live it.😎 </h5>
                     <br> <br>
@@ -512,7 +512,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/opp12.png" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/opp12.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Fellowship Applications are Open!🤩</h5>
                     <br>
@@ -543,7 +543,7 @@
 
         <div class="oppurtunity_section">
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/gsoc.png" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/gsoc.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Google summer of code (GSOC) Summer opwn source program Opportunity by google</h5>
                     <br> <br>
@@ -584,7 +584,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/Hacktoberfest.jpg" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/Hacktoberfest.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Hacktoberfest is live! 😍 </h5>
                     <br> <br>
@@ -606,7 +606,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/opp12.png" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/opp12.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Morgan Stanley Spring Analyst Program 2022 [Mumbai / Bangalore; 6 Months]!🤩</h5>
                     <br>
@@ -631,7 +631,7 @@
 
         <div class="oppurtunity_section">
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/goldmensachs.jpg" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/goldmensachs.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title"> Goldman Sachs Logo Summer Analyst Internship</h5>
                     <br> <br>
@@ -669,7 +669,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/mlh.png" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/mlh.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">MLH Fellowship program </h5>
                     <br> <br>
@@ -690,7 +690,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/fossasia.jpeg" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/fossasia.jpeg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">FOSSASIA Codeheat ...</h5>
                     <br>
@@ -721,7 +721,7 @@
 
         <div class="oppurtunity_section">
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/gtechcamp.png" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/gtechcamp.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title"> Google Cloud Tech Camp</h5>
                     <br> <br>
@@ -759,7 +759,7 @@
             </div>
 
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/gcp.png" alt="Card image cap">
+                <img class="card-img-top" src="../img/opportunity/gcp.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">GCP Summer of Learning 2022 </h5>
                     <br> <br>
@@ -901,17 +901,17 @@
     <!-- emailjs cdn -->
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="assets/js/jquery-min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/wow.js"></script>
-    <script src="assets/js/jquery.nav.js"></script>
-    <script src="assets/js/scrolling-nav.js"></script>
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/form-validator.min.js"></script>
-    <script src="assets/js/contact-form-script.min.js"></script>
+    <script src="../js/jquery-min.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/owl.carousel.min.js"></script>
+    <script src="../js/wow.js"></script>
+    <script src="../js/jquery.nav.js"></script>
+    <script src="../js/scrolling-nav.js"></script>
+    <script src="../js/jquery.easing.min.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/form-validator.min.js"></script>
+    <script src="../js/contact-form-script.min.js"></script>
 
 </body>
 
