--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<meta property="twitter:description" content="CodeIN Community is the Community of Coding Enthusiasts Join Us for Hackathons, Technical Events, Open Source, Internship Opportunities, and various upcoming opportunities to learn different technologies.">
 
 	<!-- index style ghcss  -->
-	<link rel="stylesheet" href="./CSS/index.css">
+	<link rel="stylesheet" href="./assets/css/index.css">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<!-- Icon -->
@@ -87,7 +87,7 @@
 	<link rel="stylesheet" href="./assets/css/darkmode.css">
 
 	<!-- javascript for the fetching contributors form github api -->
-	<script src="./JS/index.js" async defer></script>
+	<script src="./assets/js/index.js" async defer></script>
 
 	<!-- counter imports -->
 	<script src="assets/js/jquery-min.js"></script>
@@ -148,7 +148,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="./giveaway.html">
+							<a class="nav-link" href="./assets/html/giveaway.html">
 								Giveaways
 							</a>
 						</li>
@@ -177,13 +177,13 @@
 							  <i class="fa fa-caret-down"></i>
 							</button>
 							<div class="dropdown-content">
-									<a id="hacktoberfest" target="_blank" href="./hacktoberfest2022.html">
+									<a id="hacktoberfest" target="_blank" href="./assets/html/hacktoberfest2022.html">
 										HacktoberFest 2022
 									</a>
-									<a id="hacktoberfest" target="_blank" href="./100daysofcode.html">
+									<a id="hacktoberfest" target="_blank" href="./assets/html/100daysofcode.html">
 										100 Days of code WINNERS
 									</a>
-									<a id="hacktoberfest" target="_blank" href="./giveaway.html">
+									<a id="hacktoberfest" target="_blank" href="./assets/html/giveaway.html">
 										Giveaway Winners
 									</a>
 							</div>
@@ -386,7 +386,7 @@
 									<li>&#x25BA;&nbsp; GOODIES TO BEST PERFORMERS AND CONTRIBUTORS</li>
 								</ul>
 
-								<a href="./benefit.html" target="_blank" class="btn btn-common mt-3">Go to benefits
+								<a href="./assets/html/benefit.html" target="_blank" class="btn btn-common mt-3">Go to benefits
 									page</a>
 							</div>
 						</div>
@@ -1300,7 +1300,7 @@
 				</div>
 				<div class="swiper-button-next"></div>
 				<div class="swiper-button-prev"></div>
-				<button class="Cbtn text_dark" style="margin:20px auto 10px;border:none;" onClick="parent.location='teamMembers.html'">View All</button>
+				<button class="Cbtn text_dark" style="margin:20px auto 10px;border:none;" onClick="parent.location='./assets/html/teamMembers.html'">View All</button>
 
 
 			</div>
@@ -1450,7 +1450,7 @@
 				<img class="card-img-top" src="./assets/img/opportunity/100daysofcode.png" alt="GDSC Image">
 				<div class="card-body">
 					<h5 class="card-title text_dark text-center"> 100 Days of Code Program 🧑‍💻- By CodeIN Community</h5>
-					<a href="./opportunity.html" class="btn btn-common opportunity_btn" type="button">
+					<a href="./assets/html/opportunity.html" class="btn btn-common opportunity_btn" type="button">
 						Expand
 					</a>
 					<br> <br>
@@ -1462,7 +1462,7 @@
 				<img class="card-img-top" src="./assets/img/opportunity/opp-2.webp" alt="Spark-a-thon image">
 				<div class="card-body">
 					<h5 class="card-title text_dark text-center">Spark-a-thon a hackathon- By CodeIN Community</h5>
-					<a href="./opportunity.html" class="btn btn-common opportunity_btn" type="button">
+					<a href="./assets/html/opportunity.html" class="btn btn-common opportunity_btn" type="button">
 						Expand
 					</a>
 					<br> <br>
@@ -1474,7 +1474,7 @@
 				<img class="card-img-top" src="./assets/img/opportunity/codein-small.webp" alt="Winter fest 2022 image">
 				<div class="card-body">
 					<h5 class="card-title text_dark text-center">Winter Fest 2022 🧑‍💻</h5>
-					<a href="./opportunity.html" class="btn btn-common opportunity_btn" type="button">
+					<a href="./assets/html/opportunity.html" class="btn btn-common opportunity_btn" type="button">
 						Expand
 					</a>
 					<br> <br>
@@ -1490,7 +1490,7 @@
 
 		<br>
 		<br>
-		<button class="btn btn-common opportunity_btn"><a href="./opportunity.html">View All</a>
+		<button class="btn btn-common opportunity_btn"><a href="./assets/html/opportunity.html">View All</a>
 		</button>
 	</section>
 
@@ -1553,7 +1553,7 @@
 
 		
 	</div>
-	<button class="btn btn-common opportunity_btn opportunity_btn_t"><a href="./blog.html">View All</a>
+	<button class="btn btn-common opportunity_btn opportunity_btn_t"><a href="./assets/html/blog.html">View All</a>
 	</button>
 	<br><br>
 	<!-- Blog Section End-->
@@ -2072,7 +2072,7 @@
 		<h3>Shout-Out to our Contributors</h3>
 		<div class="contributors">
 			<span id="contributor">
-				<!-- this will be fetched and set dynamically with ./JS/index.js -->
+				<!-- this will be fetched and set dynamically with ./assets/js/index.js -->
 			</span>
 		</div>
 	</section>
@@ -2255,7 +2255,7 @@
 
 	<!-- counter scripts -->
 
-	<script src="./JS/Counter1.js"></script>
+	<script src="./assets/js/Counter1.js"></script>
 	<!--JS Function allocated to JS Folder-->
 	<!-- counter scripts end -->
 
